--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
     }
   },
   "scripts": {
-    "sass:watch": "sass --watch src/scss:public/assets/css",
-    "sass:build": "sass src/scss:public/assets/css --style=compressed --no-source-map",
-    "dev": "php -S localhost:8000 -t public"
+    "sass:build": "sass src/scss:public/assets/css --style=compressed --no-source-map"
   },
   "authors": [
     {
@@ -30,6 +28,7 @@
     "vlucas/phpdotenv": "^5.6",
     "twig/twig": "^3.0",
     "httpsoft/http-emitter": "^1.1",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "monolog/monolog": "^3.9"
   }
 }
